# deepintshield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-sdk.yml
examples/: README.md
examples/agentic/: decide.py  decorator.py  guard.py  identity.py
examples/anthropic/: chat.py  mcp.py  rag.py
examples/autogen/: tool_gating.py  transparent.py
examples/bedrock/: chat.py  rag.py
examples/crewai/: tool_gating.py  transparent.py
examples/genai/: chat.py  rag.py
examples/langchain/: chat.py  mcp.py  rag.py
examples/langgraph/: agent.py  custom_nodes.py  tool_gating.py  transparent.py
examples/litellm/: chat.py  rag.py
examples/llamaindex/: rag.py  tool_gating.py  transparent.py
examples/openai/: agent.py  chat.py  mcp.py  rag.py
examples/openai_agents/: tool_gating.py  transparent.py
examples/passthrough/: anthropic_chat.py  genai_chat.py  openai_chat.py
examples/pydanticai/: chat.py  rag.py  tool_gating.py  transparent.py
examples/rag/: guard_embedder.py  guard_retriever.py
examples/transparent/: connection.py  create_headers.py  universal_openai.py
src/deepintshield/: __init__.py  _gemini_cache.py  _prompt_cache.py  agent.py  client.py  config.py  errors.py  rag.py  transport.py  types.py
src/deepintshield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepintshield/agentic/: __init__.py  decorators.py  enforcement.py  engine.py  errors.py  gate.py  manifest.py  obligations.py  surface.py  types.py
src/deepintshield/agentic/credentials/: __init__.py  base.py  entra.py  (+2 more)
src/deepintshield/frameworks/: __init__.py  autogen.py  crewai.py  langgraph.py  llamaindex.py  openai_agents.py  pydanticai.py
src/deepintshield/mcp/: __init__.py  client.py  tool.py
src/deepintshield/providers/: __init__.py  anthropic.py  bedrock.py  genai.py  langchain.py  langgraph.py  litellm.py  openai.py  pydanticai.py
tests/: conftest.py  test_agent.py  test_agentic.py  test_agentic_langchain.py  test_client.py  test_config.py  test_errors.py  test_gemini_cache.py  test_prompt_cache.py  test_providers.py  test_rag.py  test_rag_guard.py  test_transport.py  test_types.py
(+14 files in other folders)
