[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepintshield"
version = "2.3.0"
description = "Unified Python SDK for routing chat, RAG, agentic tool-gating, identity, and MCP traffic through DeepintShield — drop-in across the top agentic frameworks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "DeepintShield" }]
keywords = ["llm", "agent", "security", "guardrails", "pep", "pdp", "agentic", "deepintshield", "entra", "langgraph", "crewai"]
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.75.0"]
anthropic = ["anthropic>=0.51.0"]
bedrock = ["boto3>=1.37.0"]
genai = ["google-genai>=1.12.1"]
litellm = ["litellm>=1.67.0"]
langchain = [
  "langchain-core>=0.3.55",
  "langchain-openai>=0.3.14",
]
langgraph = [
  "langchain-core>=0.3.55",
  "langchain-openai>=0.3.14",
  "langgraph>=0.4.2",
]
pydanticai = ["pydantic-ai>=0.1.1"]
crewai = ["crewai>=0.70.0"]
openai-agents = ["openai-agents>=0.0.10", "openai>=1.75.0"]
llamaindex = ["llama-index>=0.11.0"]
autogen = ["autogen-agentchat>=0.4.0", "autogen-ext[openai]>=0.4.0"]
azure = ["azure-identity>=1.16.0"]
mcp = ["pydantic>=2.0"]
all = [
  "openai>=1.75.0",
  "anthropic>=0.51.0",
  "boto3>=1.37.0",
  "google-genai>=1.12.1",
  "litellm>=1.67.0",
  "langchain-core>=0.3.55",
  "langchain-openai>=0.3.14",
  "langgraph>=0.4.2",
  "pydantic-ai>=0.1.1",
  "crewai>=0.70.0",
  "openai-agents>=0.0.10",
  "llama-index>=0.11.0",
  "autogen-agentchat>=0.4.0",
  "autogen-ext[openai]>=0.4.0",
  "azure-identity>=1.16.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://app.deepintshield.com"
Documentation = "https://app.deepintshield.com/docs"
Examples = "https://github.com/deepintai/deepintshield/tree/main/examples"
Source = "https://github.com/deepintai/deepintshield"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
